completed day 2 and golfed